# python-project-lvl1

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  python-package.yml
brain_games/: cli.py  game_engine.py  parity.py
brain_games/games/: calc.py  parity.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py
